--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  background-color: #242221;
-  width: 100vw;
-  height: 100vh;
+  background-color: #1E1C1C;
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
+.body-container {
+  display: flex;
 }
