--- a/src/Styles/Profile.css
+++ b/src/Styles/Profile.css
@@ -1,13 +1,12 @@
 .profile-img {
-    width: 450px;
     border-radius: 50%;
+    width: 60%;
 }
 
 .profile-img-container {
     border: 50%;
-    width: 40%;
     display: flex;
+    /* background-color: aliceblue; */
+    align-items: center;
     justify-content: center;
-    margin: 100px;
-    background-color: aliceblue;
 }
