--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,12 @@
 .App {
-  background-color: #1E1C1C;
-  max-width: 100vw;
-  max-height: 100vh;
+  background-color: #222831;
+  display: flex;
+  height: 450px;
+  height: 85vh;
 }
 
 .body-container {
   display: flex;
-  height: 500px;
   align-items: center;
-}
 
-.footer-container{
-  display: flex;
-  justify-content: space-around;
-  height: 100px;
-  width: 100vw;
-  position: absolute;
-  bottom: 0;
-  align-items:center;
-  align-content: center;
 }
