--- a/src/Styles/DinamicWindow.css
+++ b/src/Styles/DinamicWindow.css
@@ -1,20 +1,17 @@
 .window-container{
-    width: 50%;
+    width: 60%;
     height: 80%;
-    max-width: 100vw;
-    max-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: darkslategray;
 }
 
 .window-title {
-    padding-top: 0;
-    display: flex;
-    align-items: flex-start;
-    text-align: right;
-    width: 100%;
+    color: #FAEDF0;
+}
+
+.window-content-container {
+    height: 100%;
 }
 
   
