--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .App {
   background-color: #222831;
   display: flex;
-  height: 450px;
-  height: 85vh;
+  height: 83vh;
+  width: 100%;
 }
 
 .body-container {
   display: flex;
   align-items: center;
-
+  width: 100%;
 }
