--- a/src/Styles/DinamicWindow.css
+++ b/src/Styles/DinamicWindow.css
@@ -1,9 +1,10 @@
 .window-container{
-    width: 60%;
-    height: 80%;
+    max-width: 100vw;
+    width: 80%;
+    height: 85%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    position: relative;
 }
 
 .window-title {
@@ -11,7 +12,7 @@
 }
 
 .window-content-container {
-    height: 100%;
+    height: 90%;
 }
 
   
