--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -2,27 +2,31 @@ a {
     text-decoration: none;
     color: unset;
 }
+
+.navBar-container{
+	width: 76%;
+}
+
 .myButton {
     margin: 5px;
 	box-shadow:inset 0px 1px 0px 0px #cf866c;
-	background:linear-gradient(to bottom, #F05454 5%, #bc3315 100%);
+	background:linear-gradient(to bottom, #F05454 5%, #C4462B 100%);
 	background-color:#F05454;
-	border-radius:3px;
+	border-radius:2px;
 	border:1px solid #942911;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
+    color: #FAEDF0;
 	font-size:13px;
-	padding:6px 24px;
+	padding:5px 18px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #854629;
 }
 .myButton:hover {
-	background:linear-gradient(to bottom, #bc3315 5%, #F05454 100%);
-	background-color:#bc3315;
+	background:linear-gradient(to bottom, #C4462B 5%, #F05454 100%);
+	background-color:#C4462B;
 }
 .myButton:active {
 	position:relative;
 	top:1px;
+	transition: 0.3s;
 }
