Se agrega ventana experiencia

--- a/src/Styles/AboutMe.css
+++ b/src/Styles/AboutMe.css
@@ -9,6 +9,11 @@
     overflow-y: scroll;
 }
 
+.aboutmeScroll {
+    overflow: hidden;
+    font-size: 0.9rem;
+}
+
 hr {
     height: 0,1px;
     width: 20%;
