--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -35,7 +35,10 @@
     border: none;
     color: #FAEDF0;
     border-bottom: 1px #ffffffc4 solid;
+    
 }
+
+.input:focus { outline: none; }
 
 ::placeholder{
     color: #faedf03b;
