--- a/src/Styles/Proyects.css
+++ b/src/Styles/Proyects.css
@@ -4,7 +4,9 @@
     grid-template-rows: repeat(3, 1fr);
     }
     
-.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div1 { 
+    grid-area: 1 / 1 / 2 / 2; 
+}
 .div2 { grid-area: 1 / 2 / 2 / 3; }
 .div3 { grid-area: 1 / 3 / 2 / 4; }
 .div4 { grid-area: 2 / 1 / 3 / 2; }
@@ -23,4 +25,26 @@
 .img-proyect:hover {
     opacity: 0.6;
     transition: 0.3s;
+}
+
+.parrafoProyects {
+    overflow-y: scroll;
+    height: 70%;
+}
+
+.parrafoProyects::-webkit-scrollbar {
+    width: 8px;
+}
+
+.parrafoProyects::-webkit-scrollbar-thumb{
+    background: #F05454; 
+    border-radius: 25px;
+}
+
+.texto {
+
+    font-size: 12px;
+}
+
+.card{
 }
