--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,31 +1,34 @@
 .form-container {
     display: flex;
+    flex-direction:row;
     align-items: center;
     height: 80%;
     width: 85%;
 }
 
-.title-contact{
-    font-size: 35px;
+.button-input {
+    background-color: #222831;
+    border: none;
     color: #FAEDF0;
+    font-size: 1.6rem;
+    font-family: 'Mulish', sans-serif;
     font-weight: 100;
-    width: 10%;
 }
 
-.title-contact:hover {
-    transform: scale(1.1);
+.button-input:hover {
+    transform: scale(1.15);
     transition: 0.3s;
-    position: relative;
-    filter: invert(42%) sepia(49%) saturate(710%) hue-rotate(315deg) brightness(105%) contrast(101%);
+    cursor: pointer;
+    color: #F05454;
 }
 
 .form-contact{
     width: 90%;
     height: 70%;
     display: flex;
-    flex-direction: column;
+    text-align: center;
     align-items: center;
-    justify-content: flex-end;
+    justify-content:space-between;
 }
 
 .input {
