--- a/src/Styles/Cv.css
+++ b/src/Styles/Cv.css
@@ -2,7 +2,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    text-align: center;
     height: 60%;
     width: 100%;
+}
+
+.imgCv {
+    width: 15%;
+}
+
+.imgCv:hover {
+    transform: scale(1.3);
+    transition: 0.4s;
+    cursor: pointer;
 }
