--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,10 @@
   align-items: center;
   width: 100%;
 }
+
+@media screen and (max-width: 360px) and (max-height: 640px) {
+  .App {
+    max-width: 100vw;
+    height: 640px;
+  }
+}
