--- a/src/Styles/FooterButton.css
+++ b/src/Styles/FooterButton.css
@@ -23,3 +23,32 @@
     position: absolute;
     bottom: 0;
 }
+
+/* Responsive */
+
+@media screen and (max-width: 360px) and (max-height:640px) {
+    .footer-container {
+        display: none;
+
+    }
+
+    .profile-img-home {
+        width: 85%;
+    }
+
+    .title {
+        font-size: 2.8rem;
+    }
+
+    .home-container {
+        padding-top: 30px;
+    }
+
+    .ger {
+        font-size: 3.8rem;
+    }
+
+    .puesto {
+        font-size: 1.6rem;
+    }
+}
