--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
     monospace;
 }
 
+@media screen and (max-width: 360px) and (max-height: 640px) {
+  body {
+    max-width: 360px;
+    max-height: 640px;
+  }
+}
+
