--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,16 @@ code {
 
 @media screen and (max-width: 360px) and (max-height: 640px) {
   body {
-    max-width: 360px;
-    max-height: 640px;
+    max-width: 100vw;
+    max-height: 100vh;
   }
+
 }
 
+@media screen and (max-width: 375px), (max-heigth: 667px) {
+  body {
+    max-width: 100vw;
+    max-height: 100vh;
+  }
+
+}
